# LLMbench

./: .gitignore  README.md  example.env  main.py  pyproject.toml  utils.py
models/GPT4All/: models.txt
models/LlamaCpp/: models.txt
