
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Keita ATTICOT", email = "keita.atticot@ledger.fr"},
]
dependencies = [
    "pandas>=2.0.2",
    "openai>=0.27.8",
    "jq>=1.4.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
